@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }

 abstract class AbstractEnemyAircraft
 {
    # direction:int
    - abstractPropFactory:AbstractPropFactory
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + generateProp():AbstractProp
 }

class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

abstract class AbstractEnemyAircraftFactory
{
    + {abstract} createEnemyAircraft():AbstractEnemyAircraft
}

abstract class AbstractProp
{
    - startTime:int
    - limitTime:int
    + AbstractProp(int locationX, int locationY)
    + setStartTime(int startTime):void
    + getStartTime():int
    + {abstract} operate(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
     List<BaseBullet> enemybullet):void
    + {abstract} timeLimitExceeded(int currentTime):boolean
    + {abstract} setInvalid(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
    List<BaseBullet> enemybullet):void
}

abstract class AbstractPropFactory
{
    + {abstract} createProp(int locationX, int locationY):AbstractProp
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- AbstractEnemyAircraft
AbstractEnemyAircraft <|-- MobEnemy
AbstractEnemyAircraft <|-- BossEnemy
AbstractEnemyAircraft <|-- EliteEnemy

AbstractEnemyAircraftFactory <|-- BossEnemyFactory
AbstractEnemyAircraftFactory <|-- EliteEnemyFactory
AbstractEnemyAircraftFactory <|-- MobEnemyFactory

AbstractEnemyAircraft <|.. AbstractEnemyAircraftFactory
MobEnemy <|.. MobEnemyFactory
BossEnemy <|.. BossEnemyFactory
EliteEnemy <|.. EliteEnemyFactory

AbstractPropFactory <|-- PropBloodFactory
AbstractPropFactory <|-- PropBombFactory
AbstractPropFactory <|-- PropBulletFactory

AbstractPropFactory <|.. AbstractEnemyAircraft
PropBomb <|.. PropBombFactory
PropBullet <|.. PropBulletFactory
PropBlood <|.. PropBloodFactory

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- PropBlood
AbstractProp <|-- PropBomb
AbstractProp <|-- PropBullet

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - {static} heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getHeroAircraft():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
    + increaseHp(int increase):void
    + increaseFire(int increaseShootNum, int increasePower):void
}

class BossEnemy {
    - shootNum:int
    - power:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - shootNum:int
    - power:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + generateProp():AbstractProp
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + generateProp():AbstractProp
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class BossEnemyFactory {
    + createEnemyAircraft():AbstractEnemyAircraft
}

class EliteEnemyFactory {
    + createEnemyAircraft():AbstractEnemyAircraft
}

class MobEnemyFactory {
    + createEnemyAircraft():AbstractEnemyAircraft
}

class PropBlood {
    - returnBlood:int
    + PropBlood(int locationX, int locationY)
    + operate(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
    List<BaseBullet> enemybullet):void
    + timeLimitExceeded(int currentTime):boolean
    + setInvalid(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
    List<BaseBullet> enemybullet):void
}

class PropBomb {
    + PropBomb(int locationX, int locationY)
    + operate(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
    List<BaseBullet> enemybullet):void
    + timeLimitExceeded(int currentTime):boolean
    + setInvalid(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
    List<BaseBullet> enemybullet):void
}

class PropBullet {
    - increaseShootNum:int
    - increasePower:int
    - limitTime:int
    + PropBullet(int locationX, int locationY)
    + operate(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
    List<BaseBullet> enemybullet):void
    + timeLimitExceeded(int currentTime):boolean
    + setInvalid(HeroAircraft heroaircraft, List<AbstractEnemyAircraft> enemyaircraft,
    List<BaseBullet> enemybullet):void
}

class PropBloodFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

class PropBombFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

class PropBulletFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

@enduml